--- a/pack.html
+++ b/pack.html
@@ -22,10 +22,10 @@
     </header>
 
     <main>
-        <div class="add-item-form">
+        <form class="add-item-form">
             <input type="text" id="new-item-input" placeholder="Add a new item...">
             <button id="add-item-button">Add</button>
-        </div>
+        </form>
 
         <ul id="item-list" class="item-list-container">
             </ul>
