--- a/pack.html
+++ b/pack.html
@@ -23,8 +23,9 @@
 
     <main>
         <form class="add-item-form">
-            <input type="text" id="new-item-input" placeholder="Add a new item...">
-            <button id="add-item-button">Add</button>
+            <input type="text" id="new-item-input" placeholder="New item name..." required>
+            <input type="text" id="new-item-note-input" placeholder="Note (optional)...">
+            <button type="submit">Add</button>
         </form>
 
         <ul id="item-list" class="item-list-container">
