--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <h1>My Packs</h1>
     </header>
 
+    <div class="search-container">
+        <input type="search" id="search-input" placeholder="Search packs...">
+    </div>
+
     <main id="pack-list-container">
         <p class="loading-message">Loading your packs...</p>
     </main>
