--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
         <input type="search" id="search-input" placeholder="Search packs...">
     </div>
 
+    <!-- This new filter container is added -->
+    <div class="filter-container">
+        <button class="filter-btn active" data-category="all">All</button>
+        <button class="filter-btn" data-category="Race">Race</button>
+        <button class="filter-btn" data-category="School">School</button>
+        <button class="filter-btn" data-category="Personal">Personal</button>
+    </div>
+
     <main id="pack-list-container">
         <p class="loading-message">Loading your packs...</p>
     </main>
