--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
     <!-- This new filter container is added -->
     <div class="filter-container">
         <button class="filter-btn active" data-category="all">All</button>
-        <button class="filter-btn" data-category="Race">Race</button>
+        <button class="filter-btn" data-category="Travel">Travel</button>
         <button class="filter-btn" data-category="School">School</button>
         <button class="filter-btn" data-category="Personal">Personal</button>
+	<button class="filter-btn" data-category="Coaching">Coaching</button>
+	<button class="filter-btn" data-category="Study">Study</button>
+	<button class="filter-btn" data-category="Other">Other</button>
     </div>
 
     <main id="pack-list-container">
