--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
         <input type="search" id="search-input" placeholder="Search packs...">
     </div>
 
-    <!-- This new filter container is added -->
     <div class="filter-container">
         <button class="filter-btn active" data-category="all">All</button>
         <button class="filter-btn" data-category="Travel">Travel</button>
         <button class="filter-btn" data-category="School">School</button>
         <button class="filter-btn" data-category="Personal">Personal</button>
-	<button class="filter-btn" data-category="Coaching">Coaching</button>
-	<button class="filter-btn" data-category="Study">Study</button>
-	<button class="filter-btn" data-category="Other">Other</button>
+        <button class="filter-btn" data-category="Coaching">Coaching</button>
+        <button class="filter-btn" data-category="Study">Study</button>
+        <button class="filter-btn" data-category="Other">Other</button>
     </div>
 
     <main id="pack-list-container">
@@ -54,6 +53,9 @@
             </form>
         </div>
     </div>
+
+    <!-- NEW: Add the SortableJS library here -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
