--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
         <input type="search" id="search-input" placeholder="Search packs...">
     </div>
 
+    <!-- UPDATED: Added "General" filter button -->
     <div class="filter-container">
         <button class="filter-btn active" data-category="all">All</button>
+        <button class="filter-btn" data-category="General">General</button>
         <button class="filter-btn" data-category="Travel">Travel</button>
         <button class="filter-btn" data-category="School">School</button>
         <button class="filter-btn" data-category="Personal">Personal</button>
@@ -47,16 +49,16 @@
             <h2>Create New Pack</h2>
             <form id="add-pack-form">
                 <input type="text" id="pack-title-input" placeholder="Pack Title" required>
-                <!-- UPDATED: This is now a dropdown list -->
+                <!-- UPDATED: Added "General" to the dropdown -->
                 <select id="pack-category-input" required>
                     <option value="" disabled selected>Select a Category</option>
+                    <option value="General">General</option>
                     <option value="Travel">Travel</option>
                     <option value="School">School</option>
                     <option value="Personal">Personal</option>
                     <option value="Coaching">Coaching</option>
                     <option value="Study">Study</option>
                     <option value="Other">Other</option>
-                    <option value="General">General</option>
                 </select>
                 <input type="date" id="pack-date-input">
                 <button type="submit">Create Pack</button>
