--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 
     <header>
         <h1>My Packs</h1>
+        <!-- NEW: Link to the templates page -->
+        <a href="/templates.html" class="header-action-btn">
+            <i class="fas fa-layer-group"></i> Templates
+        </a>
     </header>
 
     <div class="search-container">
         <input type="search" id="search-input" placeholder="Search packs...">
     </div>
 
-    <!-- UPDATED: Added "General" filter button -->
     <div class="filter-container">
         <button class="filter-btn active" data-category="all">All</button>
         <button class="filter-btn" data-category="General">General</button>
@@ -43,13 +46,20 @@
         <i class="fas fa-plus"></i>
     </button>
     
+    <!-- UPDATED: The modal is now completely redesigned -->
     <div id="add-pack-modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2>Create New Pack</h2>
+            
+            <div class="modal-options">
+                <button id="create-blank-btn" class="modal-option-btn active">Create Blank</button>
+                <button id="create-from-template-btn" class="modal-option-btn">From Template</button>
+            </div>
+
+            <!-- Form for creating a blank pack -->
             <form id="add-pack-form">
                 <input type="text" id="pack-title-input" placeholder="Pack Title" required>
-                <!-- UPDATED: Added "General" to the dropdown -->
                 <select id="pack-category-input" required>
                     <option value="" disabled selected>Select a Category</option>
                     <option value="General">General</option>
@@ -62,6 +72,17 @@
                 </select>
                 <input type="date" id="pack-date-input">
                 <button type="submit">Create Pack</button>
+            </form>
+
+            <!-- Form for creating from a template -->
+            <form id="add-from-template-form" style="display: none;">
+                <input type="text" id="template-pack-title-input" placeholder="New Pack Title" required>
+                <select id="template-select-input" required>
+                    <option value="" disabled selected>Choose a template...</option>
+                    <!-- Templates will be loaded here by JavaScript -->
+                </select>
+                <input type="date" id="template-pack-date-input">
+                <button type="submit">Create From Template</button>
             </form>
         </div>
     </div>
