--- a/index.html
+++ b/index.html
@@ -17,39 +17,44 @@
 
     <header>
         <h1>My Packs</h1>
-        <!-- NEW: Group for header buttons -->
-        <div class="header-buttons">
-            <a href="/templates.html" class="header-action-btn">
-                <i class="fas fa-layer-group"></i> Templates
-            </a>
-            <a href="/archived.html" class="header-action-btn">
-                <i class="fas fa-archive"></i> Archived
-            </a>
+        <!-- UPDATED: This is now a dynamic user area -->
+        <div id="user-auth-container">
+            <!-- This will be filled by JavaScript -->
         </div>
     </header>
 
-    <div class="search-container">
-        <input type="search" id="search-input" placeholder="Search packs...">
+    <!-- This is the main content area that will be shown AFTER login -->
+    <div id="app-content" style="display: none;">
+        <div class="search-container">
+            <input type="search" id="search-input" placeholder="Search packs...">
+        </div>
+
+        <div class="filter-container">
+            <button class="filter-btn active" data-category="all">All</button>
+            <button class="filter-btn" data-category="General">General</button>
+            <button class="filter-btn" data-category="Travel">Travel</button>
+            <button class="filter-btn" data-category="School">School</button>
+            <button class="filter-btn" data-category="Personal">Personal</button>
+            <button class="filter-btn" data-category="Coaching">Coaching</button>
+            <button class="filter-btn" data-category="Study">Study</button>
+            <button class="filter-btn" data-category="Other">Other</button>
+        </div>
+
+        <main id="pack-list-container">
+            <p class="loading-message">Loading your packs...</p>
+        </main>
+
+        <button id="add-pack-button" class="fab">
+            <i class="fas fa-plus"></i>
+        </button>
     </div>
 
-    <div class="filter-container">
-        <button class="filter-btn active" data-category="all">All</button>
-        <button class="filter-btn" data-category="General">General</button>
-        <button class="filter-btn" data-category="Travel">Travel</button>
-        <button class="filter-btn" data-category="School">School</button>
-        <button class="filter-btn" data-category="Personal">Personal</button>
-        <button class="filter-btn" data-category="Coaching">Coaching</button>
-        <button class="filter-btn" data-category="Study">Study</button>
-        <button class="filter-btn" data-category="Other">Other</button>
+    <!-- This message is shown BEFORE login -->
+    <div id="login-prompt" class="login-prompt-container">
+        <h2>Welcome to PackPal</h2>
+        <p>Please sign in to manage your lists.</p>
+        <button id="sign-in-btn" class="header-action-btn"><i class="fab fa-google"></i> Sign in with Google</button>
     </div>
-
-    <main id="pack-list-container">
-        <p class="loading-message">Loading your packs...</p>
-    </main>
-
-    <button id="add-pack-button" class="fab">
-        <i class="fas fa-plus"></i>
-    </button>
     
     <div id="add-pack-modal" class="modal">
         <div class="modal-content">
@@ -91,6 +96,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+    <!-- NEW: Add the Firebase Auth script -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
     <script src="script.js"></script>
     
 </body>
